[gd_scene load_steps=70 format=2]

[ext_resource path="res://src/Actors/Golem.gd" type="Script" id=1]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_005.png" type="Texture" id=2]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_000.png" type="Texture" id=3]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_002.png" type="Texture" id=4]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_008.png" type="Texture" id=5]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_006.png" type="Texture" id=6]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_000.png" type="Texture" id=7]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_005.png" type="Texture" id=8]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_011.png" type="Texture" id=9]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_000.png" type="Texture" id=10]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_003.png" type="Texture" id=11]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_010.png" type="Texture" id=12]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_011.png" type="Texture" id=13]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_007.png" type="Texture" id=14]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_001.png" type="Texture" id=15]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_004.png" type="Texture" id=16]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_004.png" type="Texture" id=18]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_010.png" type="Texture" id=19]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_003.png" type="Texture" id=20]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_013.png" type="Texture" id=21]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_004.png" type="Texture" id=22]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_008.png" type="Texture" id=23]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_007.png" type="Texture" id=24]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_010.png" type="Texture" id=25]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_012.png" type="Texture" id=26]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_014.png" type="Texture" id=27]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_006.png" type="Texture" id=28]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_007.png" type="Texture" id=29]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_002.png" type="Texture" id=30]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_001.png" type="Texture" id=31]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_009.png" type="Texture" id=32]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_001.png" type="Texture" id=33]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_006.png" type="Texture" id=34]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_009.png" type="Texture" id=35]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_000.png" type="Texture" id=36]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_001.png" type="Texture" id=37]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_003.png" type="Texture" id=38]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_005.png" type="Texture" id=39]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_011.png" type="Texture" id=40]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_005.png" type="Texture" id=41]
[ext_resource path="res://Assets/Golem/Jump Start/Golem_01_Jump Start_002.png" type="Texture" id=42]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_002.png" type="Texture" id=43]
[ext_resource path="res://Assets/Golem/Attacking/Golem_01_Attacking_003.png" type="Texture" id=44]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_009.png" type="Texture" id=45]
[ext_resource path="res://Assets/Golem/Idle/Golem_01_Idle_008.png" type="Texture" id=46]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_017.png" type="Texture" id=47]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_015.png" type="Texture" id=48]
[ext_resource path="res://Assets/Golem/Walking/Golem_01_Walking_016.png" type="Texture" id=49]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_012.png" type="Texture" id=50]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_006.png" type="Texture" id=51]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_000.png" type="Texture" id=52]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_003.png" type="Texture" id=53]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_004.png" type="Texture" id=54]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_002.png" type="Texture" id=55]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_001.png" type="Texture" id=56]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_007.png" type="Texture" id=57]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_008.png" type="Texture" id=58]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_009.png" type="Texture" id=59]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_010.png" type="Texture" id=60]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_011.png" type="Texture" id=61]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_013.png" type="Texture" id=62]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_014.png" type="Texture" id=63]
[ext_resource path="res://Assets/Golem/Dying/Golem_01_Dying_005.png" type="Texture" id=64]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 37 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 16 ), ExtResource( 39 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 19 ), ExtResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 64 ), ExtResource( 51 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 50 ), ExtResource( 62 ), ExtResource( 63 ) ],
"loop": true,
"name": "dying",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 31 ), ExtResource( 42 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 2 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 33 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 34 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 35 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 47 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 15 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 18 ), ExtResource( 41 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 9 ) ],
"loop": true,
"name": "attack1",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.7065, 19.227 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.703, 14.6843 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.50572, 14.2664 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.4368, 18.4618 )

[node name="GolemEnemy" type="Node2D"]
position = Vector2( -1, 0 )

[node name="Golem" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )
speed = Vector2( 200, 1000 )

[node name="Golem" type="Sprite" parent="Golem"]
visible = false
position = Vector2( 6.88651, -26.4866 )
scale = Vector2( 0.973722, 0.914596 )
texture = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Golem"]
position = Vector2( 11.2171, -25.2581 )
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 1 )
animation = "attack1"
frame = 8
offset = Vector2( -40, 0 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Golem"]
position = Vector2( 6.35945, -19.6804 )
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="Golem" groups=[
"hitbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Golem/AttackArea"]
position = Vector2( 34.6078, -20.8631 )
shape = SubResource( 3 )

[node name="HitDetector" type="Area2D" parent="Golem"]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Golem/HitDetector"]
modulate = Color( 0.0745098, 0.0705882, 0.815686, 1 )
position = Vector2( 6.35945, -18.8631 )
shape = SubResource( 4 )

[node name="l_ray" type="RayCast2D" parent="Golem"]
enabled = true
cast_to = Vector2( -10, 0 )
collision_mask = 2

[node name="VisibleAttack" type="Area2D" parent="Golem"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Golem/VisibleAttack"]
position = Vector2( 34.6078, -20.8631 )
shape = SubResource( 5 )

[connection signal="animation_finished" from="Golem/AnimatedSprite" to="Golem" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Golem/AttackArea" to="Golem" method="_on_AttackArea_body_entered"]
[connection signal="area_entered" from="Golem/HitDetector" to="Golem" method="_on_HitDetector_area_entered"]
[connection signal="ready" from="Golem/l_ray" to="Golem" method="_on_l_ray_ready"]
[connection signal="body_entered" from="Golem/VisibleAttack" to="Golem" method="_on_VisibleAttack_body_entered"]
